[package]
name = "musync"
version = "0.5.0"
authors = ["jiang <jiang.plus.times@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
url = "2.1.1"
md5 = "0.7.0"
base16 = "0.2.1"
scan_dir = "0.3.3"
futures = "0.3.5"
rusoto_core = { version="0.45.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version="0.45.0", default_features=false, features=["rustls"] }
tokio = { version = "0.2.22", features = ["full"] }

